Moved logo down on mobile, in some cases the URL bar was covering it. Fixed search console Close/Search icons being moved off screen on mobile when you have a lot of search criteria Creators now only shows the 1 creator and Et Al if more than one.

--- a/src/styles/components/search/searchConsole.scss
+++ b/src/styles/components/search/searchConsole.scss
@@ -65,12 +65,12 @@
       .mid {
         height: 0;
         overflow: hidden;
-        .row {
+        .d-flex {
           margin: 0;
           height: 100%;
           .inputwrapper {
             height: 45px;
-            flex: 1 1 50%;
+            flex: 1 0 100%;
           }
         }
       }
@@ -272,10 +272,24 @@
         .mid {
           overflow: unset !important;
           height: 60px;
-          .inputwrapper {
-            height: 100%;
-            &.ios {
-              max-width: 75%;
+          width: 100%;
+          position: relative;
+          .d-flex {
+            .inputwrapper {
+              height: 100%;
+              flex: auto;
+              max-width: calc(90% - 55px);
+              @media screen and (min-width: 768px) {
+                max-width: unset;
+              }
+            }
+            .icon {
+              flex: 0 0 55px;
+              width: 55px;
+              @media screen and (min-width: 768px) {
+                flex: 0 0 100px;
+                width: 100px;
+              }
             }
           }
         }
@@ -306,6 +320,7 @@
         position: relative;
         overflow: hidden;
         height: 0;
+        padding-top: 20px;
         .result {
           cursor: pointer;
           position: relative;
