--- a/src/styles/layout/logo.scss
+++ b/src/styles/layout/logo.scss
@@ -2,10 +2,14 @@
   background: #fff;
   width: 100%;
   height: 100vh;
-  padding-top: 20px;
+  padding-top: 50px;
   transform: translate(0, 0);
   transition: transform .5s cubic-bezier(0.22, 0.61, 0.36, 1), opacity .2s linear;
   overflow-x: hidden;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 20px;
+  }
 
   &.loaded {
     padding-top: 0;
